k8s/namespace/test.yaml
---
# Source: cloudappdev/charts/app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test4-app
  namespace: test4
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: test4
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
---
# Source: cloudappdev/charts/itinerary-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test4
  name: test4-itinerary-service
  labels:
    helm.sh/chart: itinerary-service-1.0.1
    app.kubernetes.io/name: itinerary-service
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app.kubernetes.io/name: itinerary-service
    app.kubernetes.io/instance: test4
---
# Source: cloudappdev/charts/social-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test4
  name: test4-social-service
  labels:
    helm.sh/chart: social-service-1.0.1
    app.kubernetes.io/name: social-service
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: social-svc-port
  selector:
    app.kubernetes.io/name: social-service
    app.kubernetes.io/instance: test4
---
# Source: cloudappdev/charts/user-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test4
  name: test4-user-service
  labels:
    helm.sh/chart: user-service-1.0.5
    app.kubernetes.io/name: user-service
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: user-svc-port
  selector:
    app.kubernetes.io/name: user-service
    app.kubernetes.io/instance: test4
---
# Source: cloudappdev/charts/api-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test4
  name: test4-api-gateway
  labels:
    helm.sh/chart: api-gateway-1.0.4
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
      app.kubernetes.io/instance: test4
  template:
    metadata:
      labels:
        helm.sh/chart: api-gateway-1.0.4
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/instance: test4
        app.kubernetes.io/version: "0.0.9"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - name: api-gateway
          image: "europe-west1-docker.pkg.dev/cloudappdev-dev/docker-repo/cloudappdev-api-gateway:0.0.9"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 32Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
---
# Source: cloudappdev/charts/app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test4-app
  namespace: test4
  labels: 
    helm.sh/chart: app-1.0.2
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: test4
  template:
    metadata:
      labels:
        
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: test4
    spec:
      serviceAccountName: app-sa
      containers:
        - name: app
          image: "europe-west1-docker.pkg.dev/cloudappdev-dev/docker-repo/cloudappdev-frontend:0.0.9"
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "600m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 2
---
# Source: cloudappdev/charts/itinerary-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test4
  name: test4-itinerary-service
  labels:
    helm.sh/chart: itinerary-service-1.0.1
    app.kubernetes.io/name: itinerary-service
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: itinerary-service
      app.kubernetes.io/instance: test4
  template:
    metadata:
      labels:
        helm.sh/chart: itinerary-service-1.0.1
        app.kubernetes.io/name: itinerary-service
        app.kubernetes.io/instance: test4
        app.kubernetes.io/version: "0.0.9"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: itinerary-service-sa
      containers:
        - name: itinerary-service
          image: "europe-west1-docker.pkg.dev/cloudappdev-dev/docker-repo/cloudappdev-itinerary-service:0.0.9"
          imagePullPolicy: IfNotPresent
          ports:
            - name: itinerary-port
              containerPort: 8081
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 8081
          readinessProbe:
            failureThreshold: 30
            initialDelaySeconds: 5
            periodSeconds: 1
            tcpSocket:
              port: 8081
---
# Source: cloudappdev/charts/social-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test4
  name: test4-social-service
  labels:
    helm.sh/chart: social-service-1.0.1
    app.kubernetes.io/name: social-service
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: social-service
      app.kubernetes.io/instance: test4
  template:
    metadata:
      labels:
        helm.sh/chart: social-service-1.0.1
        app.kubernetes.io/name: social-service
        app.kubernetes.io/instance: test4
        app.kubernetes.io/version: "0.0.9"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: social-service-sa
      containers:
        - name: social-service
          image: "europe-west1-docker.pkg.dev/cloudappdev-dev/docker-repo/cloudappdev-social-service:0.0.9"
          imagePullPolicy: IfNotPresent
          ports:
            - name: social-port
              containerPort: 8082
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 5
            periodSeconds: 1
            tcpSocket:
              port: 8082
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 8082
---
# Source: cloudappdev/charts/user-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test4
  name: test4-user-service
  labels:
    helm.sh/chart: user-service-1.0.5
    app.kubernetes.io/name: user-service
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: user-service
      app.kubernetes.io/instance: test4
  template:
    metadata:
      labels:
        helm.sh/chart: user-service-1.0.5
        app.kubernetes.io/name: user-service
        app.kubernetes.io/instance: test4
        app.kubernetes.io/version: "0.0.9"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: user-service-sa
      containers:
        - name: user-service
          image: "europe-west1-docker.pkg.dev/cloudappdev-dev/docker-repo/cloudappdev-user-service:0.0.9"
          imagePullPolicy: IfNotPresent
          ports:
            - name: user-port
              containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 5
            periodSeconds: 1
            tcpSocket:
              port: 8080
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 8080
---
# Source: cloudappdev/charts/app/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test4-app-gateway
  namespace: test4
  annotations:
    networking.gke.io/certmap: cloudappdev-dev-cert-map # TODO Make configurable
spec:
  gatewayClassName: "gke-l7-global-external-managed"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "dev.cloudappdev.site"
    - name: http
      protocol: HTTP
      port: 80
      hostname: "dev.cloudappdev.site"
---
# Source: cloudappdev/charts/app/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test4-app-http
  namespace: test4
  labels:
    helm.sh/chart: app-1.0.2
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: test4-app-gateway
      namespace: 
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
# Source: cloudappdev/charts/app/templates/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test4-app-https
  namespace: test4
  labels:
    helm.sh/chart: app-1.0.2
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: test4-app-gateway
      namespace: 
      sectionName: https
  hostnames:
    - "dev.cloudappdev.site"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test4-app
          port: 80
          kind: Service
---
# Source: cloudappdev/charts/api-gateway/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "test4-api-gateway-test-connection"
  labels:
    helm.sh/chart: api-gateway-1.0.4
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['test4-api-gateway:80']
  restartPolicy: Never
---
# Source: cloudappdev/charts/app/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "test4-app-test-connection"
  labels:
    helm.sh/chart: app-1.0.2
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['test4-app:80']
  restartPolicy: Never
---
# Source: cloudappdev/charts/itinerary-service/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "test4-itinerary-service-test-connection"
  labels:
    helm.sh/chart: itinerary-service-1.0.1
    app.kubernetes.io/name: itinerary-service
    app.kubernetes.io/instance: test4
    app.kubernetes.io/version: "0.0.9"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['test4-itinerary-service:8081']
  restartPolicy: Never
